--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -34,19 +34,13 @@
 
           {% else %}
           <p>{% blocktrans %}Henüz bir hesabınız yoksa,
-            <a href="{{ signup_url }}">Buradan</a> üye olabilirsiniz.{% endblocktrans %}</p>
+            <a href="{% url 'signup' %}">Buradan</a> üye olabilirsiniz.{% endblocktrans %}</p>
           {% endif %}
 
-          <form class="login" method="POST">
+          <form method="post">
             {% csrf_token %}
-            {{ form|crispy }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <a class="btn" style="background-color:#ffbb33; color:white"
-              href="{% url 'account_reset_password' %}">{% trans "Parolamı Unuttum" %}</a>
-            <button class="btn" style="background-color:#FF8800; color:white"
-              type="submit">{% trans "Üye Girişi" %}</button>
+            {{ form.as_p }}
+            <button type="submit">Log In</button>
           </form>
         </div>
       </div>
