--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -18,14 +18,10 @@
           <p>{% blocktrans %}Bir hesabınız var mı? <a href="{{ login_url }}">Buradan</a> giriş
             yapabilirsiniz.{% endblocktrans %}
           </p>
-          <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+          <form method="post">
             {% csrf_token %}
-            {{ form|crispy }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <button class='btn' style="background-color:orange" type="submit ">{% trans "Üye Ol" %}
-              &raquo;</button>
+            {{ form.as_p }}
+            <button type="submit">Sign Up</button>
           </form>
         </div>
       </div>
