--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,11 +37,19 @@
             <span class="clearfix d-none d-sm-inline-block orange-text"> Ana Sayfa </span>
           </a>
         </li>
+        {% if request.user.is_authenticated %}
         <li class="nav-item" style="font-weight: bold;">
           <a class="nav-link waves-effect" href="{% url 'core:products' %}">
             <span class="clearfix d-none d-sm-inline-block orange-text"> Ürünler </span>
           </a>
         </li>
+        {% else %}
+        <li class="nav-item" style="font-weight: bold;">
+          <a class="nav-link waves-effect" href="{% url 'core:products_ö' %}">
+            <span class="clearfix d-none d-sm-inline-block orange-text"> Ürünler </span>
+          </a>
+        </li>
+        {% endif %}
         <li class="nav-item" style="font-weight: bold;">
           <a class="nav-link waves-effect" href="{% url 'core:about' %}">
             <span class="clearfix d-none d-sm-inline-block orange-text"> Hakkımızda </span>
@@ -54,19 +62,19 @@
         </li>
         {% if request.user.is_authenticated %}
         <li class="nav-item" style="font-weight: bold;">
-          <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
+          <a class="nav-link waves-effect" href="{% url 'logout' %}">
             <span class="clearfix d-none d-sm-inline-block orange-text"> Çıkış Yap </span>
           </a>
         </li>
 
         {% else %}
         <li class="nav-item" style="font-weight: bold;">
-          <a class="nav-link waves-effect" href="{% url 'account_login' %}">
+          <a class="nav-link waves-effect" href="{% url 'login' %}">
             <span class="clearfix d-none d-sm-inline-block orange-text"> Üye Girişi </span>
           </a>
         </li>
         <li class="nav-item" style="font-weight: bold;">
-          <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
+          <a class="nav-link waves-effect" href="{% url 'users:signup' %}">
             <span class="clearfix d-none d-sm-inline-block orange-text"> Üye Ol </span>
           </a>
         </li>
