--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
       <br> <br>
     </div>
     <div class="col-md-3">
-      <a href="mailto:efetedarik@outlook.com" target="_blank"> efetedarik@outlook.com</a>
+      <a href="mailto:info@efetedarik.net" target="_blank"> info@efetedarik.net</a>
       <br>
       <br>
       <p class="copyright"> ©Tüm Hakları Saklıdır. </p>
