--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
                         <h2>Merkez Ofis:</h2>
                         <p>Bağlıca Mahallesi, Bulvarı Bulvarı 26/F<br> Etimesgut, ANKARA /
                             TÜRKİYE</p>
-                        <a href="mailto:efetedarik@outlook.com" target="_blank"> efetedarik@outlook.com</a><br> Tel: +90
+                        <a href="mailto:info@efetedarik.net" target="_blank"> info@efetedarik.net</a><br> Tel: +90
                         312 502 4949<br>
                         Tel: +90 312 387 3000</p>
                         <br>
