--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
 
   .box-start {
     border-style: dotted;
-    border-color: #2a7c2e;
+    border-color: #8e8f4d;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-inline: 20px;
@@ -47,7 +47,7 @@
   .box-header-start {
     font-size: 20px;
     font-weight: bold;
-    color: #2a7c2e;
+    color: #7b7c41;
   }
 
   .box {
