--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -69,7 +69,7 @@
 
         {% else %}
         <li class="nav-item" style="font-weight: bold;">
-          <a class="nav-link waves-effect" href="{% url 'login' %}">
+          <a class="nav-link waves-effect" href="{% url 'users:login' %}">
             <span class="clearfix d-none d-sm-inline-block orange-text"> Üye Girişi </span>
           </a>
         </li>
